* Change log
**	[Unrealeased] [2016-11-24]
*** Changed
- modified test to handle password hashes
- Added password hashing
- Added virtual fields to the user schema
- modified the tests to accept the virtual fields
- Added confirm password field to the form.
- Added user path to the router.
- Added the post path to the router.
***	Added
- Generated users
- Created posts using phoenix.gen.html
** [Unrealeased] [2016-11-11]
*** Changed
- Added the /hello/:messenger to the path to display custom messages 
- Added the hello phoenix page.
- Changed the user name and password in dev.exs by Andrew