@@ -59,3 +59,5 @@ config :logger, level: :info
 # Finally import the config/prod.secret.exs
 # which should be versioned separately.
 import_config "prod.secret.exs"
+
+config :comeonin, bcrypt_log_rounds: 14
