@@ -15,4 +15,10 @@ defmodule Pxblog.UserTest do
     changeset = User.changeset(%User{}, @invalid_attrs)
     refute changeset.valid?
   end
+	
+	test "password_digest value gets set to a hash" do
+		changeset = User.changeset(%User{}, @valid_attrs)
+		assert Comeonin.Bcrypt.checkpw(@valid_attrs.password,
+		Ecto.Changeset.get_changeset, :password_digest)
+	end
 end
