@@ -1,6 +1,7 @@
 defmodule Pxblog.User do
   use Pxblog.Web, :model
-
+	import Comeonin.Bcrypt, only: [hashpwsalt: 1]
+	
   schema "users" do
     field :username, :string
     field :email, :string
@@ -24,7 +25,10 @@ defmodule Pxblog.User do
   end
 	
 	defp hash_password(changeset) do
-		changeset
-		|> put_change(:password_digest, "ABCDE")
+		if password = get_change(changeset, :password) do
+			changeset
+			|> put_change(:password_digest, hashpwsalt(password))
+		else
+			changeset
 	end
 end
