@@ -1,7 +1,7 @@
 * Change log
 **	[Unrealeased] [2016-11-24]
 *** Changed
-- modified test to handle password hashes
+- modified test to handle bcrypt hashes
 - Added password hashing
 - Added virtual fields to the user schema
 - modified the tests to accept the virtual fields
@@ -9,6 +9,7 @@
 - Added user path to the router.
 - Added the post path to the router.
 ***	Added
+- Added bcrypt support
 - Generated users
 - Created posts using phoenix.gen.html
 ** [Unrealeased] [2016-11-11]
